deploy/django.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8080
  selector:
    app: django
    tier: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  selector:
    matchLabels:
      app: django
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
        tier: app
    spec:
      volumes:
        - name: django-app-data
          persistentVolumeClaim:
            claimName: django-app-pvc
      containers:
        - image: 067782045631.dkr.ecr.eu-west-2.amazonaws.com/django-k8s-app:latest # c'est bon
          name: app
          ports:
            - containerPort: 8080
              name: app
          volumeMounts:
            - name: django-app-data
              mountPath: /vol/web
        - image: 067782045631.dkr.ecr.eu-west-2.amazonaws.com/django-k8s-proxy:latest # C'est bon'
          name: proxy
          ports:
            - containerPort: 8000
              name: proxy
          volumeMounts:
            - name: django-app-data
              mountPath: /vol/web
